# Helion-v2

./: .dockerignore  .gitignore  .golangci.yml  Cargo.toml  Dockerfile.coordinator  Dockerfile.node  Dockerfile.node-python  Dockerfile.node-python-rust  Dockerfile.node-rust  LICENSE  Makefile  README.md  docker-compose.e2e.yml  docker-compose.iris.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: cd.yml  ci.yml  dashboard.yml
cmd/helion-coordinator/: backfill.go  backfill_test.go  main.go  main_test.go
cmd/helion-issue-op-cert/: main.go  (+1 more)
dashboard/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  angular.json  eslint.config.js  karma.conf.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  proxy.conf.json  tsconfig.json
deploy/: docker-compose.dev-notes.md
docs/: ARCHITECTURE.md  AUDIT.md  COMPONENTS.md  DOCS-WORKFLOW.md  JWT-GUIDE.md  PERFORMANCE.md  PHASE4_DEPLOYMENT.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_README.md  README.md  SECURITY-OPS.md  SECURITY.md  benchmarks.md  dashboard.md  docker-compose-dev-notes.md  helion_v2_design.docx  ml-pipelines.md  persistence.md  runtime-rust.md
proto/: coordinator.pb.go  coordinator.proto  coordinator_grpc.pb.go  node.pb.go  node.proto  node_grpc.pb.go  runtime.proto
runtime-rust/: Cargo.toml  build.rs
runtime-rust/src/: cgroups.rs  executor.rs  ipc.rs  main.rs  proto.rs  seccomp_filter.rs
scripts/: check-dashboard-coverage.sh  docs-lint.sh  entrypoint-node-rust.sh  run-bench.sh  run-e2e.sh  run-iris-e2e.sh  test-gpu.sh  test-race.sh  verify-repo-hygiene.sh
(+664 files in other folders)
