[package]
name = "helion-runtime"
version = "0.1.0"
edition = "2021"
description = "Helion Rust runtime — executes jobs with cgroup v2 limits and seccomp-bpf filtering"

[[bin]]
name = "helion-runtime"
path = "src/main.rs"

[dependencies]
prost          = "0.13"
tokio          = { version = "1", features = ["full"] }
anyhow         = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap           = { version = "4", features = ["derive"] }
bytes          = "1"

# Unix-only: process management and signals
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-only: seccomp-bpf syscall filtering
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.3"

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level   = 3
lto         = true
strip       = true